--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-image: url(../img/bgph.jpeg);
+    background-image: url(../img/blue-phone-orange-background-760.jpeg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -72,4 +72,30 @@ section {
 #utente3{
     background-image: url(../img/bg_us3.jpeg);
     background-size: cover;
+}
+
+#utente1_{
+    background-image: url(../img/sfondo1.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: 10px;
+    padding: 100px;
+    padding-top: 20px;
+}
+#utente2_{
+    background-image: url(../img/sfondo2.jpeg);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: -80px;
+    padding: 100px;
+    padding-top: 20px;
+    
+}
+#utente3_{
+    background-image: url(../img/sfondo3.png);
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: -80px;
+    padding: 100px;
+    padding-top: 20px;
 }
