--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ section {
     border-radius: 25px;
     overflow: auto;
     margin: 20px;
+    position: relative;
 }
 .smartph {
     padding: 0.5em 1em;
@@ -98,4 +99,82 @@ section {
     background-position-y: -80px;
     padding: 100px;
     padding-top: 20px;
+}
+.buttons {
+    text-align: center;
+    margin-top: 2em;
+    display: flex;
+    justify-content: space-around;
+    color: white;
+}
+.btn{
+    font-size: 25px;
+    width: 50px;
+    border-radius: 50%;
+    padding: 0.3em; 
+    border: transparent; 
+    align-items: center;
+
+}
+.buttons p{
+    display: flex;
+    flex-direction: column;
+    
+}
+.fas {
+    color: white;
+}
+.creditobtn{
+    background-color: rgb(0, 163, 163);
+}
+.chiamabtn{
+    background-color: #01d371;
+}
+.ricaricabtn{
+    background-color: #00a6d8;
+}
+#utente1 .buttons {
+    background-color: #feaddeb1;  
+}
+#utente2 .buttons {
+    background-color: #73dba5b3;  
+}
+#utente3 .buttons {
+    background-color: #7be4e9b0;  
+}
+.d-none{
+    display: none;
+}
+.credit, .ricarica, .chiamare {
+    background-color: #cae2fbd7;
+    text-align: center;
+    color: #1c344d;
+    border-radius: 7px;
+    overflow: hidden;
+    line-height: 17px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 85%;
+}
+.credit input, .chiamare input, .ricarbtns {
+    background-color: #cae2fbd7;
+    text-align: center;
+    color: #1c344d;
+    padding: 1em;
+    border: transparent;
+    border-top: 0.5px solid rgb(143, 143, 143);
+    width: 50%;
+}
+
+.credit .close, .ricarica .ricbtn {
+    border-right: 0.5px solid rgb(143, 143, 143);
+}
+.chargeInput {
+    border: transparent;
+    background-color: #80beff;
+    color: white;
+    font-size: 20px;
+    text-align: center;
 }
